--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ theme: jekyll-theme-slate
 permalink: /posts/:title/
 exclude: ['Rakefile', 'README.md', 'config.rb', "Gemfile", "Gemfile.lock", "vendor"]
 markdown: kramdown
-url: http://blindtex.org
+url: maldicionchina.github.io/dev-blindtex.github.io/
 
 # configuration required for some pages
 
-domain: blindtex.org
+domain: maldicionchina.github.io/dev-blindtex.github.io/
 title: BlindTex
 description: Herramientas de accesibilidad de LaTex, especializada para personas invidentes.
-url: http://blindtex.org
+baseurl: /dev-blindtex.github.io
 avatar: /img/avatar.png
 author: BlindTex Team
 email:
