--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,29 @@
 theme: jekyll-theme-slate
+# standard jekyll configuration
+
+permalink: /posts/:title/
+exclude: ['Rakefile', 'README.md', 'config.rb', "Gemfile", "Gemfile.lock", "vendor"]
+markdown: kramdown
+
+#domain: maldicionchina.github.io/dev-blindtex.github.io/
+title: BlindTex
+description: Herramientas de accesibilidad de LaTex, especializada para personas invidentes.
+avatar: /img/avatar.png
+author: BlindTex Team
+email:
+github_project: https://github.com/blindtex/blindtex
+
+# configuration for ehancements, uncomment to enable
+
+google_analytics:
+  account: UA-115000681-1
+
+plugins:
+  - jekyll-sitemap
+  - jekyll-feed
+
+feed:
+  path: atom.xml
+
+sass:
+  style: :compressed
